# second-order-graph-trial

./: Cargo.toml  README.md
benches/: ascent.rs  crepe.rs  datalog.rs  for-loops.rs
common/: Cargo.toml
common/src/: collection.rs  lib.rs
datalog/: Cargo.toml
datalog/src/: logic.rs
for-loops-and-hashmaps/: Cargo.toml
for-loops-and-hashmaps/src/: lib.rs
utilities/src/: lib.rs
with-ascent/: Cargo.toml
with-ascent/src/: lib.rs  logic.rs
with-crepe/: Cargo.toml
with-crepe/src/: lib.rs  logic.rs
