[package]
name = "second-order-graph-trial"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["with-ascent", "with-crepe", "for-loops-and-hashmaps", "common", "utilities"]

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dependencies]
with-crepe = {path="./with-crepe"}
for-loops-and-hashmaps = {path="./for-loops-and-hashmaps"}
with-ascent = {path="./with-ascent"}


[dev-dependencies]
criterion = "0.3"
utilities = { path = "./utilities" }

[[bench]]
name = "ascent"
harness = false

[[bench]]
name = "crepe"
harness = false

[[bench]]
name = "for-loops"
harness = false
